--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,12 @@
     "cf-typegen": "wrangler types --env-interface Env"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
-    "@tanstack/react-form": "^1.23.5",
+    "@egoist/tailwindcss-icons": "^1.9.0",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-form": "^1.23.5",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.132.31",
     "@tanstack/react-router-with-query": "^1.130.17",
@@ -20,18 +23,28 @@
     "@tanstack/router-plugin": "^1.132.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
+    "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "sonner": "^2.0.3",
-    "tailwindcss": "^4.1.3",
+    "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.0.2"
+    "zod": "^4.0.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.13.8",
+    "@iconify-json/hugeicons": "^1.2.17",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-router-devtools": "^1.132.31",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -42,8 +55,6 @@
     "typescript": "^5.7.2",
     "vite": "^7.0.2",
     "web-vitals": "^5.0.3",
-    "@tanstack/react-query-devtools": "^5.85.5",
-    "wrangler": "^4.40.3",
-    "@cloudflare/vite-plugin": "^1.13.8"
+    "wrangler": "^4.40.3"
   }
 }
