--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^26.0.0",
+    "monaco-editor": "^0.54.0",
     "typescript": "^5.7.2",
     "vite": "^7.0.2",
     "web-vitals": "^5.0.3",
