refactor: extract hooks and components from optimize route
- Create custom hooks directory with 6 reusable hooks:
  - use-drag-and-drop: handle drag and drop events
  - use-paste-handler: handle SVG paste functionality
  - use-prettified-svg: SVG prettification logic
  - use-code-generation: code generation for multiple frameworks
  - use-auto-compress: automatic SVG compression
  - use-auto-tab-switch: automatic tab switching logic

- Create optimize-specific components:
  - optimize-header: header with file stats and action buttons
  - code-tab-content: code viewer for different frameworks

- Refactor optimize.tsx route:
  - Reduce file size from ~470 to ~215 lines (55% reduction)
  - Extract all hooks and components to separate modules
  - Improve code organization and maintainability
  - Better separation of concerns

- Update biome config:
  - Disable noUnknownAtRules for Tailwind CSS 4 compatibility

This refactoring improves:
- Code reusability across routes
- Testability of individual hooks and components
- Maintainability with clear module boundaries
- Type safety with proper TypeScript definitions

--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,9 @@
       "!**/index.css"
     ]
   },
-  "extends": ["ultracite"],
+  "extends": [
+    "ultracite"
+  ],
   "linter": {
     "rules": {
       "nursery": {
@@ -35,14 +37,16 @@
         "noHeadElement": "off"
       },
       "performance": {
-        "noNamespaceImport": "off"
+        "noNamespaceImport": "off",
+        "noBarrelFile": "off"
       },
       "security": {
         "noDangerouslySetInnerHtml": "off"
       },
       "suspicious": {
         "noExplicitAny": "off",
-        "useAwait": "off"
+        "useAwait": "off",
+        "noUnknownAtRules": "off"
       }
     }
   }
