feat: implement Web Worker optimization for CPU-intensive tasks
## Performance Optimizations

### New Web Workers Implementation
- **SVGO Worker**: Offload SVG compression to separate thread
  - Prevents main thread blocking during optimization
  - Implements LRU cache (5 min TTL, 100 entries max)
  - ~554KB worker bundle

- **Code Generator Worker**: Async framework code generation
  - Supports React JSX/TSX, Vue, Svelte, React Native, Flutter
  - DOM parsing done in main thread, string ops in worker
  - Result caching to avoid redundant computation
  - ~4KB worker bundle

- **Prettier Worker**: Async code/SVG formatting
  - Unified worker for all prettification tasks
  - Supports JavaScript, TypeScript, HTML, SVG
  - ~1.2MB worker bundle (includes Prettier + parsers)

### Infrastructure
Created reusable worker utilities:
- `WorkerManager`: Promise-based worker communication
- `WorkerCache`: Generic LRU cache with TTL support
- Worker client singletons with lazy initialization

### Updated Components
- `use-auto-compress`: Now uses SVGO worker
- `use-code-generation`: Now uses code generator worker
- `use-prettified-svg`: Now uses Prettier worker
- `code-viewer`: Prettify button uses Prettier worker

### Benefits
✅ Non-blocking UI during heavy computations
✅ Improved perceived performance for large SVG files
✅ Smart caching reduces redundant processing
✅ Vite native worker support (`?worker&url`)
✅ All checks passing (Biome compliant)

### File Organization
- `apps/web/src/workers/`: Worker implementations
- `apps/web/src/lib/worker-utils/`: Shared utilities

Build verified: All 3 workers bundled successfully

--- a/biome.json
+++ b/biome.json
@@ -23,9 +23,7 @@
       "!**/index.css"
     ]
   },
-  "extends": [
-    "ultracite"
-  ],
+  "extends": ["ultracite"],
   "linter": {
     "rules": {
       "nursery": {
