fix: resolve Cloudflare Workers deployment error by isolating SVGO imports
## Problem
Deployment failed with error:
```
Uncaught TypeError: The argument 'path' must be a file URL object,
a file URL string, or an absolute path string. Received 'undefined'
at createRequire in SVGO
```

SVGO was being bundled in server code and trying to use Node.js APIs
(createRequire) which don't exist in Cloudflare Workers runtime.

## Solution

### 1. Created svgo-config.ts
New file containing SVGO configuration utilities WITHOUT importing 'svgo':
- `buildSvgoConfig()`: Build config from plugins and settings
- `calculateCompressionRate()`: Calculate compression percentage
- `formatBytes()`: Format byte sizes
- `getStandardPreset()`: Get default SVGO preset

### 2. Isolated SVGO imports
Updated `lib/svgo.ts` to ONLY be used in workers:
- Contains only `compressSvg()` function
- Direct SVGO import for worker use only
- Added warning comment about usage

### 3. Updated all imports
Changed imports across codebase:
- `use-auto-compress.ts`: Use svgo-config
- `optimize.tsx`: Use svgo-config
- `optimize-header.tsx`: Use svgo-config
- `svgo-worker-client.ts`: Import SvgoConfig type from lib/svgo

### 4. Bundle size improvements
Client bundle:
- svgo chunk: 6.09 kB (down from 563 kB)
- Only types, no implementation

Server bundle:
- svgo chunk: 9.90 kB (down from 936 kB)
- SVGO implementation isolated in worker

## Results
✅ Deployment successful to Cloudflare Workers
✅ Total upload: 2.87 MB / gzip: 725 kB
✅ All workers properly isolated
✅ No Node.js API usage in server code
✅ Version deployed: 4b20ac13-03f3-4696-858c-893d92d8cc16

## Files Changed
- Created: `apps/web/src/lib/svgo-config.ts`
- Modified: `apps/web/src/lib/svgo.ts`
- Modified: `apps/web/src/hooks/use-auto-compress.ts`
- Modified: `apps/web/src/routes/optimize.tsx`
- Modified: `apps/web/src/components/optimize/optimize-header.tsx`
- Modified: `apps/web/src/lib/worker-utils/svgo-worker-client.ts`
- Modified: `apps/web/src/stor

--- a/apps/web/wrangler.jsonc
+++ b/apps/web/wrangler.jsonc
@@ -1,19 +1,27 @@
 {
-	"$schema": "./node_modules/wrangler/config-schema.json",
-	"name": "tiny-svg",
-	"main": "@tanstack/react-start/server-entry",
-	"compatibility_date": "2025-07-05",
-	"compatibility_flags": ["nodejs_compat"],
-	"assets": {
-		"directory": ".output/public"
-	},
-	"observability": {
-		"enabled": true
-	}
-	// "kv_namespaces": [
-	//   {
-	//     "binding": "CACHE",
-	//     "id": "<Your KV ID>",
-	//   },
-	// ],
+  "$schema": "./node_modules/wrangler/config-schema.json",
+  "name": "tiny-svg",
+  "main": "@tanstack/react-start/server-entry",
+  "compatibility_date": "2025-07-05",
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "assets": {
+    "directory": ".output/public"
+  },
+  "routes": [
+    {
+      "pattern": "tiny-svg.actnow.dev",
+      "custom_domain": true
+    }
+  ],
+  "observability": {
+    "enabled": true
+  }
+  // "kv_namespaces": [
+  //   {
+  //     "binding": "CACHE",
+  //     "id": "<Your KV ID>",
+  //   },
+  // ],
 }
