feat: add blog system with MDX support and syntax highlighting
- Add blog infrastructure with MDX compilation and rendering
- Implement syntax highlighting using rehype-pretty-code and shiki
- Create custom MDX components with beautiful styling
  - Enhanced headings with anchor links
  - Styled lists with custom bullets
  - Beautiful code blocks with language badges and copy buttons
  - Optimized blockquotes, tables, and images
- Add blog route with dynamic slug handling
- Create blog listing page with post cards
- Add blog helper functions for content management
- Update header navigation to include blog link
- Configure MDX compilation with GitHub Dark Dimmed theme
- Fix React component nesting issues for better performance
- Resolve TypeScript type compatibility with MDX components

The blog system supports:
- Full MDX syntax with React components
- Server-side content loading
- Syntax highlighting for code blocks
- Responsive design with dark mode support
- SEO-friendly metadata and structure

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,8 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@content/*": ["./content/*"]
     }
   }
 }
