--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -32,6 +34,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "rehype-pretty-code": "^0.14.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.13.0",
     "sonner": "^2.0.3",
     "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
