--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.6",
-    "ultracite": "5.6.4",
+    "@biomejs/biome": "2.3.0",
+    "@types/node": "^22.13.11",
+    "husky": "^9.1.7",
     "tsdown": "^0.15.5",
-    "@types/node": "^22.13.11"
+    "ultracite": "6.0.0"
   },
   "packageManager": "pnpm@10.14.0"
 }
