--- a/biome.json
+++ b/biome.json
@@ -23,10 +23,7 @@
       "!**/index.css"
     ]
   },
-  "extends": [
-    "ultracite",
-    "ultracite/core"
-  ],
+  "extends": ["ultracite", "ultracite/core"],
   "linter": {
     "rules": {
       "nursery": {
@@ -34,7 +31,8 @@
         "useMaxParams": "off"
       },
       "style": {
-        "noHeadElement": "off"
+        "noHeadElement": "off",
+        "useFilenamingConvention": "off"
       },
       "performance": {
         "noNamespaceImport": "off",
