--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,14 +27,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
+    "intlayer": "^6.1.6",
     "localforage": "^1.10.0",
     "lucide-react": "^0.525.0",
-    "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-intlayer": "^6.1.6",
     "rehype-pretty-code": "^0.14.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
@@ -58,10 +59,12 @@
     "@types/react": "~19.1.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^5.0.4",
+    "intlayer-cli": "^6.1.6",
     "jsdom": "^26.0.0",
     "monaco-editor": "^0.54.0",
     "typescript": "^5.7.2",
     "vite": "^7.0.2",
+    "vite-intlayer": "^6.1.6",
     "web-vitals": "^5.0.3",
     "wrangler": "^4.40.3"
   }
