--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,8 @@
       "!**/.svelte-kit",
       "!**/wrangler.jsonc",
       "!**/.source",
-      "!**/index.css"
+      "!**/index.css",
+      "!**/.intlayer"
     ]
   },
   "extends": ["ultracite", "ultracite/core"],
@@ -32,7 +33,9 @@
       },
       "style": {
         "noHeadElement": "off",
-        "useFilenamingConvention": "off"
+        "useFilenamingConvention": "off",
+        "useConsistentTypeDefinitions": "off",
+        "useUnifiedTypeSignatures": "off"
       },
       "performance": {
         "noNamespaceImport": "off",
@@ -45,7 +48,8 @@
       "suspicious": {
         "noExplicitAny": "off",
         "useAwait": "off",
-        "noUnknownAtRules": "off"
+        "noUnknownAtRules": "off",
+        "noDocumentCookie": "off"
       }
     }
   }
