--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-intlayer": "^6.1.6",
+    "react-markdown": "^10.1.0",
     "rehype-pretty-code": "^0.14.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
