feat: blog i18n & static page

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview",
     "dev": "vite dev --port=3001",
     "deploy": "pnpm run build && wrangler deploy",
+    "blog:build": "content-collections build",
     "cf-typegen": "wrangler types --env-interface Env"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "@tanstack/router-plugin": "^1.132.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "es-toolkit": "^1.41.0",
     "html2canvas": "^1.4.1",
     "intlayer": "^6.1.6",
     "localforage": "^1.10.0",
@@ -36,9 +38,6 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-intlayer": "^6.1.6",
-    "rehype-pretty-code": "^0.14.1",
-    "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.1",
     "shiki": "^3.13.0",
     "sonner": "^2.0.3",
     "svgo": "^4.0.0",
@@ -51,7 +50,12 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@content-collections/cli": "^0.1.7",
+    "@content-collections/core": "^0.11.1",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/vite": "^0.2.7",
     "@iconify-json/hugeicons": "^1.2.17",
+    "@shikijs/transformers": "^3.14.0",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-router-devtools": "^1.132.31",
     "@testing-library/dom": "^10.4.0",
@@ -62,6 +66,10 @@
     "intlayer-cli": "^6.1.6",
     "jsdom": "^26.0.0",
     "monaco-editor": "^0.54.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "typescript": "^5.7.2",
     "vite": "^7.0.2",
     "vite-intlayer": "^6.1.6",
